services/backstage/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    app.kubernetes.io/name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backstage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backstage
    spec:
      serviceAccountName: backstage
      imagePullSecrets:
        - name: ghcr.io
      containers:
        - name: backstage
          image: ghcr.io/felixz92/backstage-demo/backstage:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7007
          readinessProbe:
            httpGet:
              port: 7007
              path: /healthcheck
          livenessProbe:
            httpGet:
              port: 7007
              path: /healthcheck
          volumeMounts:
            - mountPath: /tls
              name: tls
      volumes:
        - name: tls
          secret:
            secretName: backstage-postgres-tls

"curl -v $KUBERNETES_API_SERVER/api -H "Authorization: Bearer $KUBERNETES_SERVICE_ACCOUNT_TOKEN" --cacert $KUBERNETES_CA_DATA"
