services/backstage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: backstage
  name: backstage
spec:
  ports:
    - name: http
      port: 7007
      targetPort: http
  selector:
    app.kubernetes.io/name: backstage
