services/backstage/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backstage-prod
  labels:
    app.kubernetes.io/name: backstage
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`backstage.dev.zippelf.com`)
      kind: Rule
      services:
        - name: backstage
          port: 7007
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backstage-tls-prod
  labels:
    app.kubernetes.io/name: backstage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backstage.dev.zippelf.com`)
      kind: Rule
      services:
        - name: backstage
          port: 7007
  tls:
    secretName: tls-backstage-ingress-prod
